--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,15 @@ form div {
   display: inline-block;
 }
 
+.search-source {
+  width: 92.5vw;
+  height: auto;
+/* transform: translateX() */
+  border-radius: 10%;
+  box-shadow: .1em .1em .1em .1em black;
+  margin: .1em .1em .1em .1em  
+}
+
 .Main-center {
   text-align: center;
 }
@@ -39,11 +48,13 @@ form div {
   border-color: rgb(0, 0, 0);
   border-radius: 15%; */
   margin: 1rem;
+  border-bottom: solid black;
 }
 
 .main-articles{
   display: flex;
   flex-wrap: wrap;
+  background-color:rgb(250, 250, 245);  
 }
 
 .main-a{
