--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,12 @@
 body {
   font-family: sans-serif;
+  font-size: 18px;
+}
+
+select {
+  width: 20rem;
+  height: 5rem;
+  font-size: 1.2rem;
 }
 
 a {
@@ -34,7 +41,7 @@ form div {
 }
 
 .Main-image{
-  margin:1rem 1rem 1rem 1rem;
+  margin: 0 auto;
   width: 100%;
   height: auto;
 }
@@ -58,7 +65,7 @@ form div {
 }
 
 .main-a{
-  width:25%;
+  width:40%;
   height: 100%;
   margin: 2rem;
 }
@@ -75,4 +82,12 @@ form div {
   border-radius: 50%; */
   margin: 0 10em;
   margin-bottom: 1em;
+}
+
+.article-title {
+  text-align: center;
+}
+
+.article-author {
+  text-align: center
 }
