--- a/public/style.css
+++ b/public/style.css
@@ -58,6 +58,10 @@ form div {
   font-size: 1rem;
 }
 
+.slider-fix{
+  position: relative;
+}
+
 .slider-flex {
   position: absolute;
   z-index: 1;
