--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,7 @@ html {
 body {
   font-family: sans-serif;
   font-size: 18px;
+  overflow-y: scroll;
 }
 
 select {
@@ -140,7 +141,6 @@ form div {
 
 .main-filter-box{
   align-self: center;
-  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   width: 15rem;
@@ -149,10 +149,14 @@ form div {
 }
 
 .main-options{
-  border-left: solid black;
-  border-right: solid black;
+  z-index: 1;
+  border-left: solid lightblue;
+  border-right: solid lightblue;
+  border-bottom: solid lightblue;
+  background-color: lightgoldenrodyellow;
   font-size: 1rem;
-  transition: all .3s ease
+  transition: all .3s ease;
+  opacity: 1 ;
 }
 
 .main-options:hover{
